Add styles.css. Create initial grid styling for index.html.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="styles.css">
   <title>CSS Grid Basics</title>
 </head>
 <body>
+<!-- CSS GRIDS VS. FLEXBOX
+      FLEXBOX = 1D LAYOUTS IN COLUMNS OR ROWS
+      CSS GRIDS = 2D LAYOUTS IN COLUMNS AND ROWS
+ -->
 
+   <div class="wrapper">
+     <div class="">
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, vero, officiis. Natus id, nam distinctio animi voluptates quas debitis vel optio modi, quaerat eius est molestiae fuga fugiat sequi ullam mollitia labore quo error nisi et. Earum molestiae vitae mollitia veniam distinctio fugit perspiciatis consequatur hic maxime, eaque et odio quae itaque libero, ab maiores ipsam voluptates iste corporis, expedita beatae dolor illum. Itaque qui, animi excepturi iusto ipsam, harum esse inventore facere tempore odio nobis reprehenderit consequatur, libero fugiat.
+     </div>
+     <div class="">
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab eligendi dolore ipsa sunt delectus alias aliquam nam pariatur voluptates quasi!
+     </div>
+		 <div class="">
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, vero, officiis. Natus id, nam distinctio animi voluptates quas debitis vel optio modi, quaerat eius est molestiae fuga fugiat sequi ullam mollitia labore quo error nisi et. Earum molestiae vitae mollitia veniam distinctio fugit perspiciatis consequatur hic maxime, eaque et odio quae itaque libero, ab maiores ipsam voluptates iste corporis, expedita beatae dolor illum. Itaque qui, animi excepturi iusto ipsam, harum esse inventore facere tempore odio nobis reprehenderit consequatur, libero fugiat.
+     </div>
+     <div class="">
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab eligendi dolore ipsa sunt delectus alias aliquam nam pariatur voluptates quasi!
+     </div>
+   </div>
 </body>
 </html>
