Use grid-auto-rows to create flexible row heights per container.

--- a/index2.html
+++ b/index2.html
@@ -13,6 +13,8 @@
 				/* grid-template-columns: repeat(4, 1fr 2fr); */
 				grid-template-columns: repeat(3, 1fr);
 				grid-gap: 1em;
+				/* grid-auto-rows: 100px; rows are all 100px high */
+				grid-auto-rows: minmax(100px, auto); /* 100px by default, stretch if necessary */
 			}
 
 			.wrapper > div {
@@ -32,7 +34,7 @@
 			Lorem ipsum dolor sit.
 		</div>
 		<div class="">
-			Lorem ipsum dolor sit.
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et harum, aliquam maxime, dolor corporis aliquid libero iure consectetur, tenetur iusto nisi similique! Aut ut minima a accusantium voluptates fugit dolore ipsum dolorem, odio, error unde, vel quo eos tenetur illo.
 		</div>
 		<div class="">
 			Lorem ipsum dolor sit.
