--- a/index2.html
+++ b/index2.html
@@ -17,6 +17,18 @@
 				grid-auto-rows: minmax(100px, auto); /* 100px by default, stretch if necessary */
 			}
 
+			.nested {
+				display: grid;
+				grid-template-columns: repeat(3, 1fr);
+				grid-auto-rows: 70px;
+				grid-gap: 1em;
+			}
+
+			.nested > div {
+				border: #333 1px solid;
+				padding: 1em;
+			}
+
 			.wrapper > div {
 				background: #eee;
 				padding: 1em;
@@ -25,6 +37,8 @@
 			.wrapper > div:nth-child(odd){
 					background: #ddd;
 				}
+
+
 	</style>
 
 </head>
@@ -36,8 +50,17 @@
 		<div class="">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et harum, aliquam maxime, dolor corporis aliquid libero iure consectetur, tenetur iusto nisi similique! Aut ut minima a accusantium voluptates fugit dolore ipsum dolorem, odio, error unde, vel quo eos tenetur illo.
 		</div>
-		<div class="">
-			Lorem ipsum dolor sit.
+		<div class="nested">
+			<div class="">lorem</div>
+			<div class="">lorem</div>
+			<div class="">lorem</div>
+			<div class="">lorem</div>
+			<div class="">lorem</div>
+			<div class="">lorem</div>
+			<div class="">lorem</div>
+			<div class="">lorem</div>
+			<div class="">lorem</div>
+			<div class="">lorem</div>
 		</div>
 		<div class="">
 			Lorem ipsum dolor sit.
