--- a/index2.html
+++ b/index2.html
@@ -4,43 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="styles2.css">
 	<title>CSS Grid Basics #2</title>
-	<style>
-			.wrapper {
-				display: grid;
-				/* using fractions is recommended rather than % or pixels */
-				/* grid-template-columns: 1fr 1fr 1fr; */
-				/* grid-template-columns: repeat(4, 1fr 2fr); */
-				grid-template-columns: repeat(3, 1fr);
-				grid-gap: 1em;
-				/* grid-auto-rows: 100px; rows are all 100px high */
-				grid-auto-rows: minmax(100px, auto); /* 100px by default, stretch if necessary */
-			}
-
-			.nested {
-				display: grid;
-				grid-template-columns: repeat(3, 1fr);
-				grid-auto-rows: 70px;
-				grid-gap: 1em;
-			}
-
-			.nested > div {
-				border: #333 1px solid;
-				padding: 1em;
-			}
-
-			.wrapper > div {
-				background: #eee;
-				padding: 1em;
-			}
-
-			.wrapper > div:nth-child(odd){
-					background: #ddd;
-				}
-
-
-	</style>
-
 </head>
 <body>
 	<div class="wrapper">
