Complete layout with grid template areas.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 		<body>
 			<!-- CONTAINER holds all the page contents -->
 			<div class="grid">
-				<div>TITLE</div>
-				<div>HEADER</div>
-				<div>SIDEBAR</div>
-				<div>CONTENT</div>
-				<div>FOOTER</div>
+				<div class="title">TITLE</div>
+				<div class="header">HEADER</div>
+				<div class="sidebar">SIDEBAR</div>
+				<div class="content">CONTENT</div>
+				<div class="footer">FOOTER</div>
 			</div>
 
 
