--- a/Wes-Bos-CSSGrid/05-ImplicitExplicit/index.html
+++ b/Wes-Bos-CSSGrid/05-ImplicitExplicit/index.html
@@ -13,7 +13,7 @@
 			<div class="container">
 				<div class="item">1</div>
 				<div class="item">2</div>
-				<div class="item">3</div>
+				<div class="item">Chillwave is dead?</div>
 				<div class="item">4</div>
 				<div class="item">5</div>
 				<div class="item">6</div>
@@ -21,6 +21,11 @@
 				<div class="item">8</div>
 				<div class="item">9</div>
 				<div class="item">10</div>
+				<div class="item">11</div>
+				<div class="item">12</div>
+				<div class="item">13</div>
+				<div class="item">14</div>
+				<div class="item">15</div>
 			</div>
 		</body>
 </html>
