--- a/Wes-Bos-CSSGrid/05-ImplicitExplicit/index.html
+++ b/Wes-Bos-CSSGrid/05-ImplicitExplicit/index.html
@@ -13,7 +13,7 @@
 			<div class="container">
 				<div class="item">1</div>
 				<div class="item">2</div>
-				<div class="item">Chillwave is dead?</div>
+				<div class="item">3</div>
 				<div class="item">4</div>
 				<div class="item">5</div>
 				<div class="item">6</div>
