Complete minmax() basics lesson.

--- a/Wes-Bos-CSSGrid/05-ImplicitExplicit/index.html
+++ b/Wes-Bos-CSSGrid/05-ImplicitExplicit/index.html
@@ -13,7 +13,7 @@
 			<div class="container">
 				<!-- emmit = .item.item${$}*30 -->
 				<div class="item item1">Item 1</div>
-				<div class="item item2">Item 2</div>
+				<div class="item item2">Como Estas?</div>
 				<div class="item item3">Item 3</div>
 				<div class="item item4">Item 4</div>
 				<!-- <div class="item item5">Item 5</div> -->
