--- a/Wes-Bos-CSSGrid/05-ImplicitExplicit/index.html
+++ b/Wes-Bos-CSSGrid/05-ImplicitExplicit/index.html
@@ -4,34 +4,26 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Implicit/Explicit Grid</title>
+		<title>Grid Template Areas</title>
 
 		<link rel="stylesheet" href="style.css">
 	</head>
 		<body>
-			<!-- when we set the container to display: grid, all of the elements contained within become grid items -->
+	
 			<div class="container">
-				<!-- emmit = .item.item${$}*30 -->
-				<div class="item item1">Item 1</div>
-				<div class="item item2">Como Estas?</div>
-				<div class="item item3">Item 3</div>
-				<div class="item item4">Item 4</div>
-				<!-- <div class="item item5">Item 5</div> -->
-				<!-- <div class="item item6">Item 6</div>
-				<div class="item item7">Item 7</div>
-				<div class="item item8">Item 8</div>
-				<div class="item item9">Item 9</div>
-				<div class="item item10">Item 10</div>
-				<div class="item item11">Item 11</div>
-				<div class="item item12">Item 12</div>
-				<div class="item item13">Item 13</div>
-				<div class="item item14">Item 14</div>
-				<div class="item item15">Item 15</div>
-				<div class="item item16">Item 16</div>
-				<div class="item item17">Item 17</div>
-				<div class="item item18">Item 18</div>
-				<div class="item item19">Item 19</div>
-				<div class="item item20">Item 20</div> -->
-			</div>
+		    <div class="item item1">
+		      <p>I'm Sidebar #1</p>
+		    </div>
+		    <div class="item item2">
+		      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, sed.</p>
+		      <p>Lorem ipsum d</p>
+		    </div>
+		    <div class="item item3">
+		      <p>I'm Sidebar #2</p>
+		    </div>
+		    <div class="item footer">
+		      <p>I'm the footer</p>
+		    </div>
+		  </div>
 		</body>
 </html>
