Demonstrate basics of CSS Grid alignment and centering.

--- a/Wes-Bos-CSSGrid/15-Naming-Lines/index.html
+++ b/Wes-Bos-CSSGrid/15-Naming-Lines/index.html
@@ -110,6 +110,7 @@
 
 		.item18 {
 			background: greenyellow !important;
+			grid-column-end: -1 !important; /* CSS will layout this item first, THEN other things around it */
 		}
   </style>
 </body>
