--- a/Wes-Bos-CSSGrid/Flexbox-v-CSSGrid/index.html
+++ b/Wes-Bos-CSSGrid/Flexbox-v-CSSGrid/index.html
@@ -5,45 +5,61 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Flexbox vs CSS Grid: Axis Flipping!</title>
+  <title>Flexbox vs CSS Grid: Controls on Right!</title>
 </head>
 
 <body>
 
-  <!-- Flipping the direction of columns -->
+  <!-- The everything on the right except the one thing -->
 
-  <script>
-    function flip(e) {
-      const flipper = document.querySelector('.flipper');
-      flipper.classList.toggle('flip');
-    }
-  </script>
-
-  <button onClick="flip()">Flip It</button>
-  <div class="flipper">
-    <div class="item">1</div>
-    <div class="item">2</div>
-    <div class="item">3</div>
-    <div class="item">4</div>
-    <div class="item">5</div>
-    <div class="item">6</div>
-    <div class="item">7</div>
-    <div class="item">8</div>
-    <div class="item">9</div>
-    <div class="item">10</div>
-
+  <div class="tracks">
+    <div class="track">
+      <h2>The Future (Ft. The R.O.C.)</h2>
+      <button>⭐</button>
+      <button>❤️</button>
+      <button>❌</button>
+    </div>
+    <div class="track">
+      <h2>Bounce With Me (Ft. Jermaine Dupri & Xscape)</h2>
+      <button>⭐</button>
+      <button>❤️</button>
+      <button>❌</button>
+    </div>
+    <div class="track">
+      <h2>Puppy Love (Ft. Jagged Edge & Jermaine Dupri)</h2>
+      <button>⭐</button>
+      <button>❤️</button>
+      <button>❌</button>
+    </div>
+    <div class="track">
+      <h2>You Know Me (Ft. Da Brat & Jermaine Dupri)</h2>
+      <button>⭐</button>
+      <button>❤️</button>
+      <button>❌</button>
+    </div>
+    <div class="track">
+      <h2>The Dog in Me</h2>
+      <button>⭐</button>
+      <button>❤️</button>
+      <button>❌</button>
+    </div>
+    <div class="track">
+      <h2>Bow Wow (That's My Name) (Ft. Snoop Dogg)</h2>
+      <button>⭐</button>
+      <button>❤️</button>
+      <button>❌</button>
+    </div>
   </div>
-
   <style>
-		.flipper {
+    .track {
+      background: white;
+      padding: 10px;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 			display: grid;
-			grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-			grid-gap: 20px;
-		}
-
-		.flipper.flip {
 			grid-template-columns: 1fr;
-		}
+			/* our title/song is the first track, auto generated sizes for the buttons */
+			grid-auto-flow: column;
+    }
   </style>
 </body>
 
