Demonstrate difference in sizing items with Flexbox vs Grid.

--- a/Wes-Bos-CSSGrid/Flexbox-v-CSSGrid/index.html
+++ b/Wes-Bos-CSSGrid/Flexbox-v-CSSGrid/index.html
@@ -5,62 +5,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Flexbox vs CSS Grid: Controls on Right!</title>
+  <title>Flexbox vs CSS Grid: Flex on Item!</title>
 </head>
 
 <body>
-
-  <!-- The everything on the right except the one thing -->
-
-  <div class="tracks">
-    <div class="track">
-      <h2>The Future (Ft. The R.O.C.)</h2>
-      <button>⭐</button>
-      <button>❤️</button>
-      <button>❌</button>
-    </div>
-    <div class="track">
-      <h2>Bounce With Me (Ft. Jermaine Dupri & Xscape)</h2>
-      <button>⭐</button>
-      <button>❤️</button>
-      <button>❌</button>
-    </div>
-    <div class="track">
-      <h2>Puppy Love (Ft. Jagged Edge & Jermaine Dupri)</h2>
-      <button>⭐</button>
-      <button>❤️</button>
-      <button>❌</button>
-    </div>
-    <div class="track">
-      <h2>You Know Me (Ft. Da Brat & Jermaine Dupri)</h2>
-      <button>⭐</button>
-      <button>❤️</button>
-      <button>❌</button>
-    </div>
-    <div class="track">
-      <h2>The Dog in Me</h2>
-      <button>⭐</button>
-      <button>❤️</button>
-      <button>❌</button>
-    </div>
-    <div class="track">
-      <h2>Bow Wow (That's My Name) (Ft. Snoop Dogg)</h2>
-      <button>⭐</button>
-      <button>❤️</button>
-      <button>❌</button>
-    </div>
+  <!-- The Longer Item in the middle -->
+  <div class="controls">
+    <button>⏯️</button>
+    <button>🐢</button>
+    <button>🐰</button>
+    <div class="scrubber"></div>
+    <button>💬</button>
+    <button>🔽</button>
   </div>
+
   <style>
-    .track {
-      background: white;
-      padding: 10px;
-      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    .controls {
+      margin: 200px 0;
+			/* display: flex; */
+			/* align-items: center; */
 			display: grid;
-			grid-template-columns: 1fr;
-			/* our title/song is the first track, auto generated sizes for the buttons */
-			grid-auto-flow: column;
+			grid-template-columns: auto auto auto 1fr auto auto;
+			align-items: center;
+    }
+
+    .scrubber {
+      background: #BADA55;
+      height: 10px;
+      min-width: 100px;
+      border-radius: 10px;
+			/* flex: 1; */
     }
   </style>
+
 </body>
 
 </html>
