--- a/Wes-Bos-CSSGrid/Flexbox-v-CSSGrid/index.html
+++ b/Wes-Bos-CSSGrid/Flexbox-v-CSSGrid/index.html
@@ -5,31 +5,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Flexbox vs CSS Grid: Stacked Layout!</title>
+  <title>Flexbox vs CSS Grid: Unknown Content Size!</title>
 </head>
 
 <body>
-  <!-- Stacked Layout -->
-  <div class="stacked">
-    <div class="item">1</div>
-    <div class="item">2</div>
-    <div class="item">3</div>
-    <div class="item">4</div>
-    <div class="item">5</div>
+
+  <!-- Known Columns, Unknown Content Width -->
+
+  <div class="container known">
+    <div class="item">Short</div>
+    <div class="item">Longerrrrrr</div>
+    <div class="item">
+      <img src="https://source.unsplash.com/300x200" alt="">
+    </div>
+    <div class="item">💩</div>
   </div>
 
   <style>
-    .stacked {
-    	display: flex;
-			flex-wrap: wrap;
-			justify-content: space-around;
-    }
-
-    .stacked>* {
-      width: 30%;
-      margin-bottom: 20px;
+    .known {
+      margin: 100px 0;
+			display: grid;
+			grid-template-columns: repeat(4, auto);
+			justify-content: center;
+			grid-gap: 20px;
     }
   </style>
+
 </body>
 
 </html>
