--- a/Wes-Bos-CSSGrid/Flexbox-v-CSSGrid/index.html
+++ b/Wes-Bos-CSSGrid/Flexbox-v-CSSGrid/index.html
@@ -5,32 +5,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Flexbox vs CSS Grid: Unknown Content Size!</title>
+  <title>Flexbox vs CSS Grid: Unknown Number of Items!</title>
 </head>
 
 <body>
-
-  <!-- Known Columns, Unknown Content Width -->
-
-  <div class="container known">
-    <div class="item">Short</div>
-    <div class="item">Longerrrrrr</div>
-    <div class="item">
-      <img src="https://source.unsplash.com/300x200" alt="">
-    </div>
-    <div class="item">💩</div>
+  <!-- Unknown Amount of Elements -->
+  <script>
+    function addItem() {
+      const unknown = document.querySelector('.unknown');
+      unknown.innerHTML += `<div class="item">${unknown.childElementCount}</div>`;
+    }
+  </script>
+  <button onClick="addItem()">+ Add</button>
+  <div class="unknown">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
   </div>
 
   <style>
-    .known {
-      margin: 100px 0;
+    .unknown {
 			display: grid;
-			grid-template-columns: repeat(4, auto);
-			justify-content: center;
+			grid-template-columns: repeat(auto-fit, minmax(50, 1fr));
 			grid-gap: 20px;
     }
   </style>
-
 </body>
 
 </html>
