--- a/Wes-Bos-CSSGrid/Flexbox-v-CSSGrid/index.html
+++ b/Wes-Bos-CSSGrid/Flexbox-v-CSSGrid/index.html
@@ -5,29 +5,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Flexbox vs CSS Grid: Unknown Number of Items!</title>
+  <title>Flexbox vs CSS Grid: Variable Widths on Each Row!</title>
 </head>
 
 <body>
-  <!-- Unknown Amount of Elements -->
-  <script>
-    function addItem() {
-      const unknown = document.querySelector('.unknown');
-      unknown.innerHTML += `<div class="item">${unknown.childElementCount}</div>`;
-    }
-  </script>
-  <button onClick="addItem()">+ Add</button>
-  <div class="unknown">
-    <div class="item">1</div>
-    <div class="item">2</div>
-    <div class="item">3</div>
+  <div class="flex-container">
+    <div class="item">Short</div>
+    <div class="item">Longerrrrrrrrrrrrrr</div>
+    <div class="item">💩</div>
+    <div class="item">This is Many Words</div>
+    <div class="item">Lorem, ipsum.</div>
+    <div class="item">10</div>
+    <div class="item">Snickers</div>
+    <div class="item">Wes Is Cool</div>
+    <div class="item">Short</div>
   </div>
-
   <style>
-    .unknown {
-			display: grid;
-			grid-template-columns: repeat(auto-fit, minmax(50, 1fr));
-			grid-gap: 20px;
+    .flex-container {
+			display: flex;
+			flex-wrap: wrap;
+			border: 1px solid black;
+    }
+
+    .flex-container>* {
+      margin: 10px;
+			flex: 1;
     }
   </style>
 </body>
